# pypl2mp3

./: .gitignore  LICENSE  README.md  pypl2mp3.sh  pyproject.toml
docs/api-responses/: shazam-result-sample.json  youtuble-playlist-item-sample.json
memory-bank/: index.md
memory-bank/guide/: README.md  configuration.md  examples.md  setup.md
memory-bank/implementation/: README.md  command-structure.md  core-components.md  data-flow.md
memory-bank/issues/: README.md  improvements.md  known-issues.md  solutions.md
memory-bank/overview/: README.md  core-features.md  limitations.md  purpose-goals.md
memory-bank/technical/: README.md  architecture.md  coding-style.md  dependencies.md  requirements.md
src/pypl2mp3/: main.py
src/pypl2mp3/commands/: browse_videos.py  fix_junks.py  importPlaylist.py  import_playlist.py  junkize_songs.py  listJunkSongs.py  listPlaylists.py  listSongs.py  list_junk_songs.py  list_junks.py  list_playlists.py  list_songs.py  playSongs.py  play_songs.py  tagJunkSongs.py  tag_junk_songs.py  untagSongs.py  untag_songs.py  visitSongUrls.py
src/pypl2mp3/libs/: exceptions.py  logger.py  repository.py  song.py  utils.py
